# switche

./: .gitignore  README.md  SWITCHENATOR_NOTES.txt  build.md  package-lock.json  package.json  switche.conf.toml  updateAuthor.sh  vite.config.ts
.run/: mill -w switche.webapp.run.xml  prep tauri.run.xml  prep webapp.run.xml  tauri build.run.xml  tauri dev.run.xml
elec-win32-test/: .gitignore  main.js  package.json
node-icon-extractor-test/: ico-ext-test.js  package.json  readme.txt  win-icon-extractor.js
sjs-elec-local-js-test/: .editorconfig  .project  build.sbt  main.js  package.json  server.js  webpack.config.js  win-helper.js
sjs-elec-local-js-test/src/main/scala/: Sjseleclocaljstest.scala
sjs-node-ext-module-test/: build.sbt
sjs-node-ext-module-test/project/: plugins.sbt
sjs-node-ext-module-test/src/main/resources/: local-js-test.js
sjs-node-ext-module-test/src/main/scala/tutorial/webapp/: TutorialApp.scala
sjse-quickstart/: .gitignore  README.md  build.sbt  package-lock.json  package.json
sjse-quickstart/src/main/resources/electron/: index.html  scalajs-electron-quick-start-launcher.js
sjse-quickstart/src/main/resources/jslocal/: win-helper.js
sjse-quickstart/src/main/scala/electron/: Application.scala  BrowserWindow.scala  Electron.scala  ElectronApp.scala  RendererProcess.scala  WebContents.scala
sjse-quickstart/src/main/scala/electron/ipc/: Event.scala  IpcRenderer.scala
sjse-quickstart/src/main/scala/electron/quickstart/: App.scala  Window.scala
sjse-quickstart/src/main/scala/electron/raw/: Application.scala  BrowserWindow.scala  Electron.scala
sjse-quickstart/src/main/scala/nodejs/: Buffer.scala  EventEmitter.scala  package.scala
sjse-quickstart/src/main/scala/nodejs/raw/: EventEmitter.scala
sjse-quickstart/src/main/scala/quickstart/: App.scala
sjse-winapi-test/: .gitignore  main.js  package.json
sjse-winapi-test/src/main/resources/: local-js-test.js
sjse-winapi-test/web/js/: Sjseleclocaljstest-bundle.js  Sjseleclocaljstest-bundle.js.map
switche-back/: Cargo.toml  build.rs  tauri.conf.json
switche-back/src/: autostart.rs  config.rs  icons.rs  input_proc.rs  lib.rs  main.rs  switche.rs  tauri.rs  win_apis.rs
switche-front/: build.sc  mill.bat  package-lock.json  package.json  scalablytyped.sc
switche-front/switche/: .gitignore
switche-front/switche/client/src/switche/: SearchHelper.scala  Switche.scala  SwitcheFace.scala
switche-front/switche/resources/webapp/: index.html  switche.css
switche-tauri/: .gitignore  LICENSE  Makefile  build.sc  package-lock.json  package.json  scalablytyped.sc  switche.conf.toml  vite.config.ts
switche-tauri/src-tauri/: Cargo.toml  tauri.conf.json
switche-tauri/src-tauri/src/: config.rs  exclusions.rs  icons.rs  input_proc.rs  lib.rs  main.rs  switche.conf.toml  switche.rs  tauri.rs  win_apis.rs
switche-tauri/switche/client/src/: tauri-sjs-test.scala
switche-tauri/switche/client/src/switche/: IconsManager.scala  Switche.scala  SwitcheFace.scala  SwitcheState.scala  SwitcheTauri.scala
switche-tauri/switche/resources/webapp/: index.html  switche-styles.css  switche.css
switchenator-sjse/: .editorconfig  .gitignore  .project  Makefile  README.md  build.sbt  main.js  package-lock.json  package.json  switche-invis-runner-v1.vbs  switche-invis-runner-v2.vbs  switche-invis-runner-v3.vbs  switche-killer.vbs  switche-runner.vbs  webpack.config.js  win-helper.js
switchenator-sjse/project/: plugins.sbt
switchenator-sjse/src/main/resources/: win-helper.js  win-icon-extractor.js
switchenator-sjse/src/main/scala/: Sjseleclocaljstest.scala  SwitchenatorSjse.scala
switchenator-sjse/src/main/scala/switche/: ExclusionsManager.scala  IconsManager.scala  SearchHelper.scala  SwitcheFace.scala  SwitcheState.scala  SwitchenatorSjse.scala
switchenator-sjse/web/: index-dev-server.html  index-dev.html  index.html
switchenator-sjse/web/css/: app.css
switchernator-sjse-xapp/: .gitignore  build.sbt  package.json
switchernator-sjse-xapp/project/: GlobalSettings.scala  plugins.sbt
switchernator-sjse-xapp/switchback/src/main/scala/: ScalatraBootstrap.scala
switchernator-sjse-xapp/switchback/src/main/scala/yakrider/scala/utils/: UtilFns.scala
switchernator-sjse-xapp/switchback/src/main/scala/yakrider/switchenator/switchback/: SwitchBack.scala  SwitchBackJnaCore.scala
switchernator-sjse-xapp/switchback/src/main/webapp/WEB-INF/: web.xml
switchernator-sjse-xapp/switchface/src/main/resources/: logback.xml  win-helper.js
switchernator-sjse-xapp/switchface/src/main/resources/electron/: index.html  switchface-electron-launcher.js
switchernator-sjse-xapp/switchface/src/main/scala/com/yakrider/switchenator/switchface/: SwitchFace.scala
win-event-hook-test/: app-broken.js  app-orig-working.js  app-worker_threads.js  app.js  package.json
