[package]
name = "switche"
version = "2.2.8"
# ^^ reminder to update this in all places (cargo.toml, tauri.conf.json, Readme.md, help-text)
description = "Switche - Searchable Task Switcher"
authors = ["yakrider"]
keywords = ["switcher", "alt-tab", "task-switcher", "window-switcher" ]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }


[dependencies.tauri]
version = "1.6.1"
features = ["fs-all", "global-shortcut-all", "process-all", "shell-open", "system-tray", "window-close", "window-hide", "window-set-always-on-top", "window-set-focus", "window-show", "window-start-dragging"]

[features]
default = ["custom-protocol"]
# ^^ by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
custom-protocol = ["tauri/custom-protocol"]
# this ^^ feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!



[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.9.0"
grouping_by = "0.2.2"
strum = "0.24"
strum_macros = "0.24"
no_deadlocks = "1.3.0"
image = "0.24.6"
base64 = "0.21.0"
rand = "0.8.5"
quick-xml = "0.28.2"
toml_edit = "0.22.9"

#planif = "1.0.0"
planif = { git = "https://github.com/yakrider/planif.git", branch = "check_task" }




[target.'cfg(windows)'.dependencies.windows]
version = "0.54.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_System_SystemServices",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_Debug",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Storage_Packaging_Appx",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Security",
    "Win32_UI_HiDpi",
]

