[package]
name = "switche"
version = "2.4.0"
# ^^ reminder to update this in tauri.conf.json as well
description = "Switche - Searchable Task Switcher"
authors = ["yakrider"]
keywords = ["switcher", "alt-tab", "task-switcher", "window-switcher" ]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies.tauri]
version = "2"
features = ["tray-icon"]

[features]
default = ["custom-protocol"]
# ^^ by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
custom-protocol = ["tauri/custom-protocol"]
# this ^^ feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!



[dependencies]
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
once_cell = "1"
grouping_by = "0.2"
atomic_enum = "0.3"
strum_macros = "0.24"
#no_deadlocks = "1.3.0"
dirs = "5"
image = "0.24"
base64 = "0.21"
rand = "0.8"
quick-xml = "0.37"
toml_edit = "0.22"
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
tracing-appender = "0.2"

#planif = "1.0.0"
planif = { git = "https://github.com/yakrider/planif.git", branch = "check_task" }




[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_System_SystemServices",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_Debug",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Storage_Packaging_Appx",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Security",
    "Win32_UI_HiDpi",
]

