[package]
name = "switche"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }


[dependencies.tauri]
version = "1.2"
features = ["fs-all", "global-shortcut-all", "process-all", "shell-open", "system-tray", "window-hide", "window-set-focus", "window-show", "window-start-dragging"]

[features]
default = ["custom-protocol"]
# ^^ by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
custom-protocol = ["tauri/custom-protocol"]
# this ^^ feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!



[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.9.0"
grouping_by = "0.2.2"
strum = "0.24"
strum_macros = "0.24"
no_deadlocks = "1.3.0"
image = "0.24.6"
base64 = "0.21.0"
rand = "0.8.5"




[target.'cfg(windows)'.dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_System_SystemServices",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
]

